--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Servicios</a>
+                        </li> -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="./src/paginas/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="./src/paginas/contacto.html">Contacto</a>
                         </li>
                     </ul>
                     <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5">
@@ -59,14 +59,14 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Servicios</a>
+                        </li> -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="./src/paginas/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="./src/paginas/contacto.html">Contacto</a>
                         </li>
                     </ul>
                     <div class="btn-reg-log d-flex gap-3 align-items-center mt-3 mt-md-0">
