unida seccion de formulario de solicitud de turnos

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <article class="seccion-gestion d-flex flex-column text-center align-items-center justify-content-center">
                 <h3 class="text-center mb-5">Auto Gestión</h3>
                 <section class="d-flex flex-column align-items-center justify-content-center gap-2 p-2 flex-sm-row gap-md-5">
-                    <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 btn-gestion">Gestiona tus Turnos</button>
+                    <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 btn-gestion btn-turnos">Gestiona tus Turnos</button>
                     <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 btn-gestion">Mis Estudios</button>
                 </section>
             </article>
