--- a/src/paginas/admin.html
+++ b/src/paginas/admin.html
@@ -28,9 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Servicios</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#">Nosotros</a>
                         </li>
@@ -49,9 +49,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Servicios</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#">Nosotros</a>
                         </li>
