--- a/src/paginas/solicitarTurno.html
+++ b/src/paginas/solicitarTurno.html
@@ -6,67 +6,178 @@
     <title>Rolling Clinic - Policonsultorios</title>
     <link rel="stylesheet" href="../css/solicitarTurno.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/global.css">
 </head>
 <body>
-<section class="container solicitarTurno">
-    <h3 class="text-center mb-4"id="solicitar">Agendar Turno</h3>
-    <form class="container d-flex flex-column align-items-stretch col-12 justify-content-around">
-        <div class="row mb-3">
-            <label for="nombre" class="col-sm-4 col-form-label">Nombre Completo</label>
-            <div class="col-sm-7">
-                <input type="text" class="form-control" id="inputNombre">
+    <header>
+        <nav class="navbar navbar-expand-md ">
+            <div class="container-fluid d-flex justify-content-between">
+                <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
+                    <a class="navbar-brand" href="#">
+                        <img src="../iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
+                    Rolling Clínica
+                    </a>
+                    <button class="navbar-toggler border border-2 border-light" data-bs-theme="light" type="button" data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" popovertarget="menu-nav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="d-md-flex justify-content-between align-items-center d-none" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <!-- <li class="nav-item">
+                            <a class="nav-link" href="#">Servicios</a>
+                        </li> -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+                    </ul>
+                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5">
+                        <button class="btn-secundario rounded rounded-sm p-1">Registro</button>
+                        <button class="btn-primario btn-login rounded rounded-sm p-1">Login</button>
+                    </div>
+                </div>
+                <!-- MENU POPOVER MOBILE -->
+                <div class="menu-nav" id="menu-nav" popover role="menu">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <!-- <li class="nav-item">
+                            <a class="nav-link" href="#">Servicios</a>
+                        </li> -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+                    </ul>
+                    <div class="btn-reg-log d-flex gap-3 align-items-center mt-3 mt-md-0">
+                        <button class="btn-secundario rounded rounded-sm p-1">Registro</button>
+                        <button class="btn-primario rounded rounded-sm p-1 btn-login">Login</button>
+                    </div>
+                </div>
+                <!-- FIN MENU MOBILE -->
+                <!-- MODAL LOGIN -->
+                <dialog id="modal-login">
+                    <form method="dialog" id="form-login">
+                        <button type="button" class="btn-close m-1 border border-2 border-white p-1 bg-light" id="btn-close-login" aria-label="Close"></button>
+                        <div class="input-group">
+                            <span for="usuario" class="input-group-text">Usuario</span>
+                            <input type="text" name="usuario" id="usuario" class="form-control" autofocus>
+                        </div>
+                        <div class="input-group">
+                            <span for="password" class="input-group-text">Password</span>
+                            <input type="password" name="password" id="password" class="form-control">
+                        </div>
+                        <div class="login-buttons">
+                            <button class="btn-primario rounded rounded-sm p-1" id="btn-login-ingresar">Ingresar</button>
+                            <button class="btn-secundario rounded rounded-sm p-1" id="btn-login-cancelar">Cancelar</button>
+                        </div>
+                        <p class="">Aun no tenes cuenta? <a class="btn-orange btn-sm rounded rounded-sm p-2" href="#">Registrarse</a></p>
+                    </form>
+                </dialog>
+                <!-- FIN MODAL LOGIN -->
             </div>
-        </div>
-        <div class="row mb-3">
-            <label for="dni" class="col-sm-4 col-form-label">DNI</label>
-            <div class="col-sm-7">
-                <input type="number" class="form-control" id="inputDni">
+        </nav>
+    </header>
+    <main class="container solicitarTurno">
+        <section class="main-container">
+            <h3 class="text-center mb-4"id="solicitar">Agendar Turno</h3>
+            <form class="container d-flex flex-column align-items-stretch col-12 justify-content-around">
+                <div class="row mb-3">
+                    <label for="nombre" class="col-sm-4 col-form-label">Nombre Completo</label>
+                    <div class="col-sm-7">
+                        <input type="text" class="form-control" id="inputNombre">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="dni" class="col-sm-4 col-form-label">DNI</label>
+                    <div class="col-sm-7">
+                        <input type="number" class="form-control" id="inputDni">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="telefono" class="col-sm-4 col-form-label">Teléfono</label>
+                    <div class="col-sm-7">
+                        <input type="tel" class="form-control" id="inputTelefono">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="fecha" class="col-sm-4 col-form-label">Fecha</label>
+                    <div class="col-sm-7">
+                        <input type="date" class="form-control" id="inputFecha">
+                    </div>
+                </div>
+                
+                <div class="row mb-3">
+                    <label for="hora" class="col-sm-4 col-form-label">Horario</label>
+                    <div class="col-sm-7">
+                        <input type="time" class="form-control" id="inputHora">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="especialidad" class="col-sm-4 col-form-label">Especialidad</label>
+                    <div class="col-sm-7">
+                        <select class="form-select" id="inputEspecialidad">
+                            <option value='' selected>--</option>
+                            <option value="cardiologia">Cardiología</option>
+                            <option value="traumatologia">Traumatología</option>
+                            <option value="ginecologia">Ginecología</option>
+                            <option value="pediatria">Pediatria</option>
+                            <option value="psiquiatria">Psiquiatria</option>
+                            <option value="neurologia">Neurologia</option>
+                            <option value="podologia">Podologia</option>
+                            <option value="psicologia">Psicologia</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="motivo" class="col-sm-4 col-form-label">Motivo</label>
+                    <textarea class="col-sm-7 border border-1 rounded-2 p-2" rows="5" cols="7" id="inputMotivo"></textarea>
+                </div>
+                <p id="errorText"></p>
+                <div class="botonesTurno d-flex flex-column align-items-center justify-content-center gap-2">
+                    <button type="submit" class="btn mt-3 btn-primario" id="btnAgendar">Agendar</button>
+                    <a class="btn btn-orange p-1 rounded rounded-1 m-auto" href="../../index.html" role="button">Volver a la página principal</a>
+                </div>
+            </form>
+
+        </section>
+    </main>
+    <footer class="container">
+        <article class="d-flex flex-column-reverse align-items-center justify-content-center w-100 gap-2 flex-sm-row flex-wrap justify-content-sm-between">
+            <div class="col-lg-4 d-flex col-12 col-sm-3 justify-content-center align-items-center bordesFooter align-self-stretch" >
+                <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i>           </h3>    
+                <div class="m-3"><img src="../img/ministerioSalud.jpg" alt="logo ministerio de salud de la nacion" srcset=""> </div>
             </div>
-        </div>
-        <div class="row mb-3">
-            <label for="telefono" class="col-sm-4 col-form-label">Teléfono</label>
-            <div class="col-sm-7">
-                <input type="tel" class="form-control" id="inputTelefono">
+            <div class="col-lg-4 d-flex col-12 col-sm-3 align-items-stretch justify-content-center bordesFooter"> 
+                <ul class="d-flex flex-column justify-content-around align-items-center gap-4 p-3 w-100 h-100 text-center text-sm-start">
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Mis turnos</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Contacto</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Politicas de Privacidad</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Ministerio de salud</a></li>
+                </ul>
             </div>
-        </div>
-        <div class="row mb-3">
-            <label for="fecha" class="col-sm-4 col-form-label">Fecha</label>
-            <div class="col-sm-7">
-              <input type="date" class="form-control" id="inputFecha">
+            <div class="col-lg-4 d-flex col-12 col-sm-6 justify-content-center align-items-stretch bordesFooter p-3" > 
+                <div class="container d-flex justify-content-between flex-column align-items-center" id="redesSocialesFooter">
+                    <p class="row">Nuestras redes sociales</p>
+                    <div class="d-flex mb-1 justify-content-between w-100 align-items-start flex-column footer-icons gap-2">
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-x-twitter fa-lg"></i> Twitter</a>
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i> Facebook</a>
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i> Instagram</a>
+                    </div>
+                </div>
             </div>
-        </div>
-        
-        <div class="row mb-3">
-            <label for="hora" class="col-sm-4 col-form-label">Horario</label>
-            <div class="col-sm-7">
-                <input type="time" class="form-control" id="inputHora">
-            </div>
-        </div>
-        <div class="row mb-3">
-            <label for="especialidad" class="col-sm-4 col-form-label">Especialidad</label>
-            <div class="col-sm-7">
-                <select class="form-select" id="inputEspecialidad">
-                    <option value='' selected>--</option>
-                    <option value="cardiologia">Cardiología</option>
-                    <option value="traumatologia">Traumatología</option>
-                    <option value="ginecologia">Ginecología</option>
-                    <option value="pediatria">Pediatria</option>
-                    <option value="psiquiatria">Psiquiatria</option>
-                    <option value="neurologia">Neurologia</option>
-                    <option value="podologia">Podologia</option>
-                    <option value="psicologia">Psicologia</option>
-                </select>
-            </div>
-        </div>
-        <div class="row mb-3">
-            <label for="motivo" class="col-sm-4 col-form-label">Motivo</label>
-            <textarea class="col-sm-7 border border-1 rounded-2 p-2" rows="5" cols="7" id="inputMotivo"></textarea>
-        </div>
-        <p id="errorText"></p>
-        <button type="submit" class="btn mt-3 btn-primary" id="btnAgendar">Agendar</button>
-    </form>
-</section>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<script src="../js/scriptSolicitar.js"></script>
+        </article>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/scriptSolicitar.js"></script>
 </body>
 </html>
