--- a/src/paginas/registro.html
+++ b/src/paginas/registro.html
@@ -20,21 +20,21 @@
             <div class="container-fluid d-flex justify-content-between">
                 <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
                     <a class="navbar-brand" href="#">
-                        <img src="../img/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
+                        <img src="../iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
                     Rolling Clínica
                     </a>
                     <button class="navbar-toggler border border-2 border-light" data-bs-theme="light" type="button" data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" popovertarget="menu-nav">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
-                <div class="d-md-flex justify-content-between align-items-center d-none" id="navbarNav">
+                <div class="d-md-flex justify-content-between align-items-center d-none w-50" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link" aria-current="page" href="../../index.html">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Servicios</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#">Nosotros</a>
                         </li>
@@ -42,8 +42,8 @@
                             <a class="nav-link" href="#">Contacto</a>
                         </li>
                     </ul>
-                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5">
-                        <button class="btn-secundario rounded rounded-sm p-1">Registro</button>
+                    <div class="btn-reg-log d-flex gap-3 align-items-center mt-3 mt-md-0 ms-5">
+                        <button class="btn-secundario rounded rounded-sm p-1 mr-2">Registro</button>
                         <button class="btn-primario btn-login rounded rounded-sm p-1">Login</button>
                     </div>
                 </div>
@@ -53,9 +53,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Servicios</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#">Nosotros</a>
                         </li>
@@ -135,7 +135,6 @@
                 <button type="reset" class="btn btn-secondary btn-block">Reset</button>
             </form>
         </div>
-
     </main>
 
     <footer class="container">
@@ -164,10 +163,10 @@
             </div>
         </article>
     </footer>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="../js/script.js"></script>
     <script src="../js/scriptRegistro.js"></script>
 
 </body>
