--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <!-- MENU POPOVER MOBILE -->
-            <div class="menu-nav d-flex d-md-none" id="menu-nav" popover role="menu">
+            <div class="menu-nav d-flex d-md-none flex-column" id="menu-nav" popover role="menu">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
@@ -68,7 +68,7 @@
                         <a class="nav-link" href="./src/paginas/contacto.html">Contacto</a>
                     </li>
                 </ul>
-                <div class="btn-reg-log d-flex gap-3 align-items-center mt-3 mt-md-0">
+                <div class="btn-reg-log d-flex gap-2 align-items-center mt-1 mt-md-0">
                     <a role="button" href="./src/paginas/registro.html" class="btn-secundario rounded rounded-sm p-1">Registro</a>
                     <button class="btn-primario rounded rounded-sm p-1 btn-login">Login</button>
                 </div>
@@ -90,7 +90,7 @@
                         <button class="btn-primario rounded rounded-sm p-1" id="btn-login-ingresar">Ingresar</button>
                         <button class="btn-secundario rounded rounded-sm p-1" id="btn-login-cancelar">Cancelar</button>
                     </div>
-                    <p class="">Aun no tenes cuenta? <a class="btn-orange btn-sm rounded rounded-sm p-2" href="#">Registrarse</a></p>
+                    <p class="">Aun no tenes cuenta? <a class="btn-orange btn-sm rounded rounded-sm p-2" href="./src/paginas/registro.html">Registrarse</a></p>
                 </form>
             </dialog>
             <!-- FIN MODAL LOGIN -->
