--- a/src/paginas/solicitarTurno.html
+++ b/src/paginas/solicitarTurno.html
@@ -10,80 +10,85 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-md ">
-            <div class="container-fluid d-flex justify-content-between">
-                <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
-                    <a class="navbar-brand" href="#">
-                        <img src="../iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
+        <nav class="navbar navbar-expand-md">
+            <div class="navbar-logo col-md-4 d-flex justify-content-md-center justify-content-between col-12">
+                <a class="navbar-brand d-flex justify-content-center align-items-center w-100" href="../../index.html">
+                    <img src="../iconos/health-icon.svg" alt="Logo" width="50" height="40"
+                        class="d-inline-block align-text-center">
                     Rolling Clínica
-                    </a>
-                    <button class="navbar-toggler border border-2 border-light" data-bs-theme="light" type="button" data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" popovertarget="menu-nav">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
-                <div class="d-md-flex justify-content-between align-items-center d-none" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../../index.html">Inicio</a>
-                        </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
-                        </li> -->
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
-                        </li>
-                    </ul>
-                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5">
-                        <button class="btn-secundario rounded rounded-sm p-1">Registro</button>
-                        <button class="btn-primario btn-login rounded rounded-sm p-1">Login</button>
-                    </div>
-                </div>
-                <!-- MENU POPOVER MOBILE -->
-                <div class="menu-nav" id="menu-nav" popover role="menu">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                        </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
-                        </li> -->
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
-                        </li>
-                    </ul>
-                    <div class="btn-reg-log d-flex gap-3 align-items-center mt-3 mt-md-0">
-                        <button class="btn-secundario rounded rounded-sm p-1">Registro</button>
-                        <button class="btn-primario rounded rounded-sm p-1 btn-login">Login</button>
-                    </div>
-                </div>
-                <!-- FIN MENU MOBILE -->
-                <!-- MODAL LOGIN -->
-                <dialog id="modal-login">
-                    <form method="dialog" id="form-login">
-                        <button type="button" class="btn-close m-1 border border-2 border-white p-1 bg-light" id="btn-close-login" aria-label="Close"></button>
-                        <div class="input-group">
-                            <span for="usuario" class="input-group-text">Usuario</span>
-                            <input type="text" name="usuario" id="usuario" class="form-control" autofocus>
-                        </div>
-                        <div class="input-group">
-                            <span for="password" class="input-group-text">Password</span>
-                            <input type="password" name="password" id="password" class="form-control">
-                        </div>
-                        <div class="login-buttons">
-                            <button class="btn-primario rounded rounded-sm p-1" id="btn-login-ingresar">Ingresar</button>
-                            <button class="btn-secundario rounded rounded-sm p-1" id="btn-login-cancelar">Cancelar</button>
-                        </div>
-                        <p class="">Aun no tenes cuenta? <a class="btn-orange btn-sm rounded rounded-sm p-2" href="#">Registrarse</a></p>
-                    </form>
-                </dialog>
-                <!-- FIN MODAL LOGIN -->
+                </a>
+                <button class="navbar-toggler border border-2 border-light" data-bs-theme="light" type="button"
+                    data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation" popovertarget="menu-nav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
             </div>
+            <div class="d-md-flex justify-content-between align-items-center d-none col-md-8 " id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../../index.html">Inicio</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                      <a class="nav-link" href="#">Servicios</a>
+                  </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
+                </ul>
+                <div class="btn-reg-log d-flex gap-2 align-items-center justify-content-center mt-md-0 ms-1">
+                    <a role="button" href="./registro.html" class="btn-secundario rounded rounded-sm p-1">Registro</a>
+                    <button class="btn-primario btn-login rounded rounded-sm p-1">Login</button>
+                </div>
+            </div>
+            <!-- MENU POPOVER MOBILE -->
+            <div class="menu-nav d-flex d-md-none flex-column" id="menu-nav" popover role="menu">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                      <a class="nav-link" href="#">Servicios</a>
+                  </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
+                </ul>
+                <div class="btn-reg-log d-flex gap-2 align-items-center mt-1 mt-md-0">
+                    <a role="button" href="./registro.html" class="btn-secundario rounded rounded-sm p-1">Registro</a>
+                    <button class="btn-primario rounded rounded-sm p-1 btn-login">Login</button>
+                </div>
+            </div>
+            <!-- FIN MENU MOBILE -->
+            <!-- MODAL LOGIN -->
+            <dialog id="modal-login">
+                <form method="dialog" id="form-login">
+                    <button type="button" class="btn-close m-1 border border-2 border-white p-1 bg-light"
+                        id="btn-close-login" aria-label="Close"></button>
+                    <div class="input-group">
+                        <span for="usuario" class="input-group-text">Usuario</span>
+                        <input type="text" name="usuario" id="usuario" class="form-control" autofocus>
+                    </div>
+                    <div class="input-group">
+                        <span for="password" class="input-group-text">Password</span>
+                        <input type="password" name="password" id="password" class="form-control">
+                    </div>
+                    <div class="login-buttons">
+                        <button class="btn-primario rounded rounded-sm p-1" id="btn-login-ingresar">Ingresar</button>
+                        <button class="btn-secundario rounded rounded-sm p-1" id="btn-login-cancelar">Cancelar</button>
+                    </div>
+                    <p class="">Aun no tenes cuenta? <a class="btn-orange btn-sm rounded rounded-sm p-2"
+                            href="./registro.html">Registrarse</a></p>
+                </form>
+            </dialog>
+            <!-- FIN MODAL LOGIN -->
+            <!-- <div class="container-fluid d-flex justify-content-between">
+          </div> -->
         </nav>
     </header>
     <main class="container solicitarTurno">
