arreglada pagina de registro y agregada pagina de error 404

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <h3 class="text-center mb-5">Auto Gestión</h3>
                 <section class="d-flex flex-column align-items-center justify-content-center gap-2 p-2 flex-sm-row gap-md-5">
                     <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 btn-gestion btn-turnos">Gestiona tus Turnos</button>
-                    <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 btn-gestion">Mis Estudios</button>
+                    <button class="d-flex align-items-center justify-content-center btn-orange rounded rounded-sm p-5 col-12 col-sm-6 btn-gestion btn-estudios">Mis Estudios</button>
                 </section>
             </article>
             <!-- PROFESIONALES -->
@@ -208,8 +208,8 @@
                 <ul class="d-flex flex-column justify-content-around align-items-center gap-4 p-3 w-100 h-100 text-center text-sm-start">
                     <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Mis turnos</a></li>
                     <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Contacto</a></li>
-                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Politicas de Privacidad</a></li>
-                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Ministerio de salud</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="./src/paginas/error404.html" target="_blank">Politicas de Privacidad</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="./src/paginas/error404.html" target="_blank">Ministerio de salud</a></li>
                 </ul>
             </div>
             <div class="col-lg-4 d-flex col-12 col-sm-6 justify-content-center align-items-stretch bordesFooter p-3" > 
