--- a/src/paginas/error404.html
+++ b/src/paginas/error404.html
@@ -6,24 +6,136 @@
     <title>Rolling Clinic - Error</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/global.css">
-    <script
-      src="https://kit.fontawesome.com/3a0c1a8233.js"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3a0c1a8233.js" crossorigin="anonymous"></script>
 </head>
-<body class="body-container">
+<body class="container">
+    <header>
+        <nav class="navbar navbar-expand-md">
+            <div class="navbar-logo col-md-4 d-flex justify-content-md-center justify-content-between col-12">
+                <a class="navbar-brand d-flex justify-content-center align-items-center w-100" href="../../index.html">
+                    <img src="../iconos/health-icon.svg" alt="Logo" width="50" height="40"
+                        class="d-inline-block align-text-center">
+                    Rolling Clínica
+                </a>
+                <button class="navbar-toggler border border-2 border-light" data-bs-theme="light" type="button"
+                    data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation" popovertarget="menu-nav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="d-md-flex justify-content-between align-items-center d-none col-md-8 " id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../../index.html">Inicio</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                      <a class="nav-link" href="#">Servicios</a>
+                  </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
+                </ul>
+                <div class="btn-reg-log d-flex gap-2 align-items-center justify-content-center mt-md-0 ms-1">
+                    <a role="button" href="./registro.html" class="btn-secundario rounded rounded-sm p-1">Registro</a>
+                    <button class="btn-primario btn-login rounded rounded-sm p-1">Login</button>
+                </div>
+            </div>
+            <!-- MENU POPOVER MOBILE -->
+            <div class="menu-nav d-flex d-md-none flex-column" id="menu-nav" popover role="menu">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                      <a class="nav-link" href="#">Servicios</a>
+                  </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
+                </ul>
+                <div class="btn-reg-log d-flex gap-2 align-items-center mt-1 mt-md-0">
+                    <a role="button" href="./registro.html" class="btn-secundario rounded rounded-sm p-1">Registro</a>
+                    <button class="btn-primario rounded rounded-sm p-1 btn-login">Login</button>
+                </div>
+            </div>
+            <!-- FIN MENU MOBILE -->
+            <!-- MODAL LOGIN -->
+            <dialog id="modal-login">
+                <form method="dialog" id="form-login">
+                    <button type="button" class="btn-close m-1 border border-2 border-white p-1 bg-light"
+                        id="btn-close-login" aria-label="Close"></button>
+                    <div class="input-group">
+                        <span for="usuario" class="input-group-text">Usuario</span>
+                        <input type="text" name="usuario" id="usuario" class="form-control" autofocus>
+                    </div>
+                    <div class="input-group">
+                        <span for="password" class="input-group-text">Password</span>
+                        <input type="password" name="password" id="password" class="form-control">
+                    </div>
+                    <div class="login-buttons">
+                        <button class="btn-primario rounded rounded-sm p-1" id="btn-login-ingresar">Ingresar</button>
+                        <button class="btn-secundario rounded rounded-sm p-1" id="btn-login-cancelar">Cancelar</button>
+                    </div>
+                    <p class="">Aun no tenes cuenta? <a class="btn-orange btn-sm rounded rounded-sm p-2"
+                            href="./registro.html">Registrarse</a></p>
+                </form>
+            </dialog>
+            <!-- FIN MODAL LOGIN -->
+            <!-- <div class="container-fluid d-flex justify-content-between">
+          </div> -->
+        </nav>
+    </header>
     <main class="container contenedor d-flex justify-content-center align-items-center flex-column rounded-2">
-        <h1 class="text-center btn fs-1 fw-bold">Oops!.. </h1>
-        <section class="container">
-            <figure class="w-100 d-flex justify-content-center">
-                <img class="img-fluid" src="../img/estetoscopio-enredado.png" alt="estetoscopio enredado" width="500px" height="450px">
-            </figure>
-        </section>
-        <p class="text-center">Parece que esta pagina <span class="fw-bold">no está disponible</span></p>
-        <a href="../../index.html" class="btn btn-orange rounded-2 place-self-center mb-4">Volver a Página Principal</a>
+        <article class="main-container container">
+            <h1 class="text-center btn fs-1 fw-bold">Oops!.. </h1>
+            <section class="container">
+                <figure class="w-100 d-flex justify-content-center">
+                    <img class="img-fluid" src="../img/estetoscopio-enredado.png" alt="estetoscopio enredado" width="500px" height="450px">
+                </figure>
+            </section>
+            <p class="text-center">Parece que esta pagina <span class="fw-bold">no está disponible</span></p>
+            <a href="../../index.html" class="btn btn-orange rounded-2 place-self-center mb-4 w-50 m-auto">Volver a Página Principal</a>
+        </article>
     </main>
+    <!-- FOOTER -->
+    <footer class="container">
+        <article class="d-flex flex-column-reverse align-items-center justify-content-center w-100 gap-2 flex-sm-row flex-wrap justify-content-sm-between">
+            <div class="col-lg-4 d-flex col-12 col-sm-3 justify-content-center align-items-center bordesFooter align-self-stretch" >
+                <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i>           </h3>    
+                <div class="m-3"><img src="../img/ministerioSalud.jpg" alt="logo ministerio de salud de la nacion" srcset=""> </div>
+            </div>
+            <div class="col-lg-4 d-flex col-12 col-sm-3 align-items-stretch justify-content-center bordesFooter"> 
+                <ul class="d-flex flex-column justify-content-around align-items-center gap-4 p-3 w-100 h-100 text-center text-sm-start">
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Mis turnos</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Contacto</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Politicas de Privacidad</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Ministerio de salud</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-4 d-flex col-12 col-sm-6 justify-content-center align-items-stretch bordesFooter p-3" > 
+                <div class="container d-flex justify-content-between flex-column align-items-center" id="redesSocialesFooter">
+                    <p class="row">Nuestras redes sociales</p>
+                    <div class="d-flex mb-1 justify-content-between w-100 align-items-start flex-column footer-icons gap-2">
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-x-twitter fa-lg"></i> Twitter</a>
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i> Facebook</a>
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i> Instagram</a>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </footer>
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="../js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
