--- a/src/paginas/admin.html
+++ b/src/paginas/admin.html
@@ -93,9 +93,9 @@
           </div> -->
         </nav>
     </header>
-    <main>
+    <main class="container">
         <figure>
-            <img src="../img/Foto4.png" class="img-fluid w-100 " alt="...">
+            <img src="../img/Foto4.png" class="img-fluid w-100 rounded-2" alt="...">
         </figure>
         <div class="text-center contacto-style">
             <div class="container-fluid">
