--- a/src/paginas/admin.html
+++ b/src/paginas/admin.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/global.css">
     <script src="https://kit.fontawesome.com/3a0c1a8233.js"crossorigin="anonymous"></script>
 </head>
-<body class="body-container">
+<body class="body-container container">
     <header>
         <nav class="navbar navbar-expand-md">
             <div class="navbar-logo col-md-4 d-flex justify-content-md-center justify-content-between col-12">
@@ -133,23 +133,23 @@
         <article class="d-flex flex-column-reverse align-items-center justify-content-center w-100 gap-2 flex-sm-row flex-wrap justify-content-sm-between">
             <div class="col-lg-4 d-flex col-12 col-sm-3 justify-content-center align-items-center bordesFooter align-self-stretch" >
                 <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i>           </h3>    
-                <div class="m-3"><img src="../img/ministerioSalud.jpg" alt="logo ministerio de salud de la nacion" srcset=""> </div>
+                <div class="m-3"><img src="../img/ministerioSalud.jpg" alt="logo ministerio de salud de la nacion"> </div>
             </div>
             <div class="col-lg-4 d-flex col-12 col-sm-3 align-items-stretch justify-content-center bordesFooter"> 
                 <ul class="d-flex flex-column justify-content-around align-items-center gap-4 p-3 w-100 h-100 text-center text-sm-start">
                     <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Mis turnos</a></li>
                     <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Contacto</a></li>
-                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Politicas de Privacidad</a></li>
-                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Ministerio de salud</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="../paginas/error404.html" target="_blank">Politicas de Privacidad</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="../paginas/error404.html" target="_blank">Ministerio de salud</a></li>
                 </ul>
             </div>
             <div class="col-lg-4 d-flex col-12 col-sm-6 justify-content-center align-items-stretch bordesFooter p-3" > 
                 <div class="container d-flex justify-content-between flex-column align-items-center" id="redesSocialesFooter">
                     <p class="row">Nuestras redes sociales</p>
                     <div class="d-flex mb-1 justify-content-between w-100 align-items-start flex-column footer-icons gap-2">
-                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-x-twitter fa-lg"></i> Twitter</a>
-                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i> Facebook</a>
-                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i> Instagram</a>
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="./error404.html" target="_blank"><i class="fa-brands fa-x-twitter fa-lg"></i> Twitter</a>
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="./error404.html" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i> Facebook</a>
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="./error404.html" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i> Instagram</a>
                     </div>
                 </div>
             </div>
