--- a/src/paginas/medicos.html
+++ b/src/paginas/medicos.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
 </head>
-<body>
+<body class="container container-fluid">
     <header>
         <nav class="navbar navbar-expand-md">
             <div class="navbar-logo col-md-4 d-flex justify-content-md-center justify-content-between col-12">
